# anki-sentences

./: .gitignore  README.md  flake.nix
.github/workflows/: ci.yml
apps/card-template/: index.ts  package.json  vite.config.ts
apps/card-template/src/: App.svelte  TranslationPopover.svelte  ankiCssReset.css  devSample.ts  index.css  main.ts
apps/card-template/vite/: ankiPasteableTemplatePlugin.ts
apps/deck-cli/: .prettierignore  build-with-argos.sh  deck.config.jsonc  deck.config.schema.json  package.json  tsconfig.json
apps/deck-cli/src/: index.ts
assets/: demo.mov
docs/: googleAuth.md
scripts/: example.apkg  index.ts  package.json
scripts/app/: index.html  package.json  vite.config.ts
scripts/app/src/: app.tsx  main.tsx
scripts/patches/: anki-apkg-export+4.0.3.patch  sql.js+0.5.0.patch
scripts/sentences/: README.md  sentences.ts  tatoebaSentences.test.ts  tatoebaSentences.types.ts  updateTatoebaLanguages.ts
scripts/tatoeba/: README.md  tatoebaSentences.test.ts  tatoebaSentences.ts
scripts/translate/: README.md  pyproject.toml
scripts/words/: updateFrequencyWords.ts
source/: .env.example  .gitignore  build-with-argos.sh  cli.ts  deck.config.jsonc  deck.config.schema.json  index.ts  package.json  tsconfig.json
source/modules/app/: index.ts  package.json
source/modules/audioGeneration/: googleTts.test.ts  googleTts.ts  index.ts
source/modules/cardTemplate/: index.html  index.ts  package.json  tsconfig.app.json  vite.config.ts
source/modules/cli/: defaults.ts  options.ts  run.ts  types.ts
source/modules/config/: deckConfig.ts
(+104 files in other folders)
