[project]
name = "argos-translate-server"
version = "0.1.0"
description = "Small FastAPI server exposing Argos Translate at /translate"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argostranslate>=1.9,<2",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
]

[tool.uv]
package = false
